SERVER-60533 Return empty result in distinct when database not found